chore: add authentication and dashboard pages